[project]
name = "spark-deltalake-databricks-lecture-demo"
version = "0.1.0"
description = "Spark DeltaLake and Databricks Lecture Demo"
requires-python = ">=3.9"
dependencies = [
    "delta-spark>=3.2.1",
    "deltalake>=0.22.2",
    "jupyterlab>=4.3.1",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "pyspark>=3.5.3",
]
